# Augh

./: .gitignore  Augh.cabal  CHANGELOG.md  COPYING  README  README.md  package.yaml  sample.augh  stack.yaml
src/: Main.lhs  augh2uml-Main.lhs  uml2gv-Main.lhs
src/Augh/: .#Uml.lhs  Asst3Uml.hs  Graphviz.lhs  GvTypes.lhs  Parser.lhs  Uml.lhs  UmlLabel.lhs  UmlTypes.lhs
